# axum-aide-redoc-already-borrowed-gen-ctx-poc

./: Cargo.toml  README.md
src/: main.rs
